--- a/dating.html
+++ b/dating.html
@@ -8,6 +8,7 @@
      <body>
          <h1>Enter Your Details For Our Dating Website</h1>
          <form action="https://learn.nucamp.co/show_everything.php" method="post" enctype="multipart/form-data" />
+         <script src="https://url.nucamp.co/datingjs"></script>
      </body>
      <fieldset>
          <legend>Your Face</legend>
@@ -61,6 +62,7 @@
          <input type="range" id="salary" name="salary" min="0" max="100" value="50">
          <span class="range-caption">Rich</span> 
      </div>
+    
      <form>
         <fieldset>
             <legend>Your Contact Information</legend>
